--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Test</title>
-    <style type="text/css" media="screen">
+    <style type="text/css">
      * {
        margin: 0; 
        padding: 0;
