--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div id="SMdropdown">
                     <button class="sm">Social Media</button>
                     <div id="smContent">
-                        
+                        <a href="https://facebook.com">Facebook</a>
                     </div>
                 </div>
             </div>
