--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	        <a href="https://vincentochoa2007.github.io/cmms.website.github.io/social.html">Social Media</a>
 	        <div class="search-container">
 	            <form action="https://vincentochoa2007.github.io/cmms.website.github.io/search.php/">
-	                <input type="text" placeholder="Search...">
+	                <input type="text" placeholder="Search..." name="search">
 	                <button type="submit">
 	                    <i class="fafa-search">Search</i>
 	                </button>
