--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	        <a href="https://vincentochoa2007.github.io/cmms.website.github.io/district.html">District Website</a>
 	        <a href="https://vincentochoa2007.github.io/cmms.website.github.io/social.html">Social Media</a>
 	        <div class="search-container">
-	            <form action="https://vincentochoa2007.github.io/cmms.website.github.io/search.php" method="get">
+	            <form action="https://vincentochoa2007.github.io/cmms.website.github.io/search.php" method="post">
 	                <input type="submit" placeholder="Search..." name="search">
 	                <button type="submit">
 	                    <i class="fafa-search">Search</i>
