--- a/video_embed.html
+++ b/video_embed.html
@@ -133,9 +133,9 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext" style="color:black;"><b>4 / 4</b></div>
   <video width="100%" controls>
-    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/blob/master/rotating-screen-edited.mp4?raw=true" type="video/mp4">
+    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/blob/master/school-pictures-edited.mp4?raw=true" type="video/mp4">
   </video>
-  <div class="text"><b></b></div>
+  <div class="text"><b>How to Access School Pictures</b></div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
