--- a/chromebook_embed.html
+++ b/chromebook_embed.html
@@ -107,17 +107,17 @@ img {vertical-align: middle;}
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext" style="color:black;"><b>3 / 4</b></div>
+  <div class="numbertext" style="color:black;"><b>1 / 2</b></div>
   <video width="100%" controls>
-    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/blob/master/customize_account_edited.webm?raw=true" type="video/webm">
+    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/blob/master/rotating-screen-edited.mp4?raw=true" type="video/mp4">
   </video>
-  <div class="text"><b>Customize your Google Account</b></div>
+  <div class="text"><b>Rotating Your Screen</b></div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext" style="color:black;"><b>4 / 4</b></div>
+  <div class="numbertext" style="color:black;"><b>2 / 2</b></div>
   <video width="100%" controls>
-    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/blob/master/school-pictures-edited.mp4?raw=true" type="video/mp4">
+    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/blob/master/.mp4?raw=true" type="video/mp4">
   </video>
   <div class="text"><b>How to Access School Pictures</b></div>
 </div>
