--- a/chromebook_embed.html
+++ b/chromebook_embed.html
@@ -116,9 +116,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext" style="color:black;"><b>2 / 2</b></div>
-  <video width="100%" controls>
-    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/blob/master/school-pictures-edited%20(1).txt?raw=true" type="video/mp4">
-  </video>
+  <iframe src="https://drive.google.com/file/d/1XoZo4TLptUTAyCCvwyJtr8ChWmppZxJ_/preview" width="640" height="480"></iframe>
   <div class="text"><b>How to Access School Pictures</b></div>
 </div>
 
