--- a/chromebook_embed.html
+++ b/chromebook_embed.html
@@ -116,7 +116,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext" style="color:black;"><b>2 / 2</b></div>
-  <iframe src="https://drive.google.com/file/d/1XoZo4TLptUTAyCCvwyJtr8ChWmppZxJ_/preview" width="100%" height="100%"></iframe>
+  <iframe src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1571364118&f=LRWotJWQ6bgwdY0GWPO8Ag&d=0&m=p&r=360p&volume=100&start_res=undefined&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options=" width="100%"></iframe>
   <div class="text"><b>How to Access School Pictures</b></div>
 </div>
 
