--- a/chromebook_embed.html
+++ b/chromebook_embed.html
@@ -117,7 +117,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext" style="color:black;"><b>2 / 2</b></div>
   <video width="100%" controls>
-    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/master/Video Embed.webm?raw=true" type="video/webm">
+    <source src="https://github.com/VincentOchoa2007/cmms.website.github.io/blob/master/Video Embed.webm?raw=true" type="video/webm">
   </video>
   <div class="text"><b>How to Access School Pictures</b></div>
 </div>
